@@ -36,6 +36,18 @@
     </listitem>
 -->
     <listitem>
+      <para>2014-08-12</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Update patches for bash, readline, and mpfr.  Fixes 
+          <ulink url="&lfs-ticket-root;3648">#3648</ulink>, 
+          <ulink url="&lfs-ticket-root;3649">#3649</ulink>, and
+          <ulink url="&lfs-ticket-root;3650">#3650</ulink>.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2014-08-10</para>
       <itemizedlist>
         <listitem>
