@@ -292,6 +292,10 @@
     </listitem>
 
     <listitem>
+      <para>mpfr-3.1.2-upstream_fixes-1.patch</para>
+    </listitem>
+
+    <listitem>
       <para>perl-5.18.2-libc-1.patch</para>
     </listitem>
 
